# puzzles

./: montecarlo.py  pyproject.toml
causal_inference_primer/: ch1.py
jane_street/: robot_javelin.py
jp_quant_research/: storage_gas.py
