[project]
name = "puzzles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.8.0",
    "jupyter-client>=8.8.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pynvim>=0.6.0",
    "scipy>=1.17.0",
    "setuptools>=80.10.1",
    "yfinance>=1.0",
]
